bridge-firmwareOOP/debuglog.txt
WARNING: library ArduinoSTL claims to run on avr, samd architecture(s) and may be incompatible with your current board which runs on sam architecture(s).
In file included from /home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:75:0:
/home/lonn/Arduino/libraries/NunchuckFunctions/NunchuckFunctions.h:21:33: error: storage class specified for 'nunchuck_buf'
   extern uint8_t   nunchuck_buf[];
                                 ^

Error during build: exit status 1
